fix: #1 Added createdAt and infotip in report card, fixed minor styles , added padding-bottom to layout, aligned elements by center in filter view reports, fixed bug with hide button CreateDayReport when it's exist yet (#1737)

--- a/mw-webapp/src/logic/Layout.module.scss
+++ b/mw-webapp/src/logic/Layout.module.scss
@@ -4,7 +4,7 @@
   width: 100%;
   max-width: $maxWidthContainer;
   flex-grow: 1;
-  padding: 0 $paddingMedium;
+  padding: 0 $paddingMedium $paddingMedium;
   margin: 0 auto;
   gap: $gapSmall;
 
