--- a/mw-webapp/src/logic/wayPage/WayPage.module.scss
+++ b/mw-webapp/src/logic/wayPage/WayPage.module.scss
@@ -36,6 +36,7 @@ $labelMaxWidthBlock: 650px;
 }
 
 .viewSwitcher {
+  align-items: center;
   margin-left: auto;
 }
 
